# manchester-dnd

./: .dockerignore  .env.example  .gitignore  .grype.yaml  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  deny.toml  package-lock.json  package.json  rust-toolchain.toml
.context/: REWRITE_PART_1.md  TABLE_SCHEMA.md
.context/mongo/: 01-target-data-model.md  02-security-consistency-and-operations.md  03-game-mechanics-and-ai-state.md  04-sql-to-mongo-disposition.md  05-implementation-plan.md  06-requirements-and-decisions.md  07-dragonflydb-integration.md  README.md
.github/workflows/: ci.yml
.hermes-orchestration/: CHECKLIST.md  PLAN.md  REVIEW_NOTES.md  TEST_RESULTS.md
.hermes-orchestration/implementation/: t_3799221d.md
.hermes-orchestration/research/: t_f793a393.md
app/: Cargo.toml
app/src/: app.rs  auth_boundary.rs  campaign.rs  freeform.rs  hero.rs  images.rs  info.rs  lib.rs  lifecycle.rs  main.rs
app/src/components/: auth.rs  campaign_lobby.rs  character_campaigns.rs  character_library.rs  freeform.rs  info.rs  layout.rs  lifecycle.rs  mod.rs  privacy.rs  protected_layout.rs  public_header.rs  side_navigation.rs  turn_history.rs
app/src/views/: campaign_lobby.rs  campaign_new.rs  campaign_play.rs  campaigns.rs  character_campaign_stats.rs  character_detail.rs  character_new.rs  characters.rs  home.rs  login.rs  mod.rs  signup.rs
app/src/views/campaign_lobby/: api.rs  mod.rs
app/src/views/campaigns/: library.rs  mod.rs
app/src/views/characters/: mod.rs
app/src/views/home/: mod.rs
app/src/views/login/: mod.rs
content/: provenance-manifest.json
content/mechanics/: engine-traceability.json
content/srd-5.1/: README.md
crates/game-core/: Cargo.toml
crates/game-core/src/: ability.rs  action.rs  action_points.rs  ai.rs  ai_turn.rs  campaign_pins.rs  character.rs  check.rs  dice.rs  digest.rs  encounter.rs  error.rs  exploration.rs  hero.rs  identifier.rs  lib.rs  player_character.rs  proficiency.rs  progression.rs  roll.rs  rules_matrix.rs  ruleset.rs  session.rs
crates/game-server/: Cargo.toml
crates/game-server/src/: application.rs  auth.rs  campaign_pins.rs  config.rs  content.rs  context.rs  error.rs  events.rs  generation.rs  generation_ledger.rs  gm.rs  inspiration.rs  lib.rs  recovery_vault.rs  repository.rs  scene_images.rs  seed.rs  source_vault.rs  typed_gm.rs
crates/game-server/src/application/: hero.rs  lifecycle.rs  player_characters.rs
crates/game-server/src/cache/: mod.rs
crates/game-server/src/persistence/: auth.rs  email_crypto.rs  indexes.rs  mod.rs  mongo.rs  schema.rs  transaction.rs  validators.rs
crates/game-server/src/repository/: action_points.rs  auth.rs  governance.rs  hero.rs  images.rs  inspiration.rs  jobs.rs  legacy.rs  lifecycle.rs  memberships.rs  operations.rs  pins.rs  player_characters.rs  presentations.rs  recaps.rs
crates/game-server/tests/: typed_gm_evaluation.rs
crates/game-server/tests/mongo_contract/: auth.rs  foundation.rs
docs/: CHECKLIST.md  operations.md
docs/evidence/: mechanic-traceability-gate.md  rewrite-part-1-auth-and-isolation.md  slice-0-acceptance.md  slice-0-browser-accessibility.md  slice-1-encounter.md  slice-3-typed-gm-evaluation.md  slice-4-local-campaign-lifecycle.md  slice-5-consent-privacy.md  slice-5-ingestion-foundation.md  slice-6-scene-images.md  typed-gm-v1.json  typed-gm-v2.json
docs/legal/: private-test-data-handling.md
docs/operations/: database-recovery.md  private-inspiration-runbook.md  release-operations.md  slice-0-runbook.md
docs/planning/: 01-product-vision.md  02-architecture.md  03-rules-and-gameplay.md  04-ai-generation.md  05-persistence.md  (+8 more)
frontend/: Cargo.toml
frontend/src/: lib.rs
migrations/: 0001_server_storage.sql  0002_command_receipts.sql  0003_turn_audit_correlation.sql  0004_hero_creation_and_advancement.sql  0005_generation_jobs.sql  0006_encounter_reward_claims.sql  0007_campaign_content_pins.sql  0008_major_encounter_reward.sql  0009_generated_text_presentations.sql  0010_campaign_lifecycle.sql  0011_generated_text_idempotency_receipts.sql  0012_generation_governance.sql  0013_private_inspiration_consent.sql  0014_private_inspiration_player_controls.sql  0015_private_inspiration_presentations.sql  0016_private_inspiration_interventions.sql  0017_private_inspiration_safety_setup.sql  0018_private_inspiration_theme_scope.sql  0019_private_inspiration_global_kill_switch.sql  0020_private_inspiration_participant_deletion.sql  0021_scene_image_artifacts.sql  0022_private_inspiration_runtime_and_access.sql  0023_private_campaign_recaps.sql  0024_operator_recovery_status.sql  0025_accounts_and_sessions.sql  0026_player_character_library.sql  0027_player_character_audit_retention.sql  0028_campaign_memberships.sql  0029_campaign_membership_theme.sql  0030_campaign_lobbies_and_turns.sql  0031_custom_action_points.sql
scripts/: check-doc-links.sh  check-mongo-role-policy.sh  check-postgres-role-policy.sh  check-private-inspiration-boundary.sh  check-release-dependencies.sh  generate-release-sbom.sh  install-pinned-supply-chain-tools.sh  mongo-rs-init.js  postgres-roles.sql  provider-disabled-smoke.sh  record_release_provenance.py  run-container-smoke.sh  run-database-recovery-drill.sh  run-fuzz-smoke.sh  run-legacy-import-drill.sh  run-load-soak.sh  run-penetration-smoke.sh  run-private-source-vault-drill.sh  scan-runtime-image.sh  scan-secrets.sh  smoke-provider-disabled.sh  validate-migrations.sh  validate_javascript_dependencies.py  validate_mechanic_traceability.py  validate_release_provenance.py  validate_runtime_rootfs.py
server/: Cargo.toml
server/src/: main.rs
style/: main.css
tests/fuzz/: Cargo.toml  deny.toml
tests/fuzz/corpus/dice_expressions/: basic
tests/fuzz/corpus/durable_json/: session
tests/fuzz/corpus/model_output/: provider
tests/fuzz/corpus/pack_and_event_ingestion/: event
tests/fuzz/corpus/public_inputs/: lifecycle
tests/fuzz/fuzz_targets/: dice_expressions.rs  durable_json.rs  image_boundaries.rs  model_output.rs  pack_and_event_ingestion.rs  public_inputs.rs
(+58 files in other folders)
