[workspace]
resolver = "2"
members = [
    "app",
    "crates/game-core",
    "crates/game-server",
    "frontend",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
dotenvy = "0.15.7"
http = "1.3.1"
leptos = "0.8.20"
leptos_axum = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
rand = "0.9.2"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = [
    "chrono",
    "json",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
] }
thiserror = "2.0.18"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["compression-gzip", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.17.0", features = ["js", "serde", "v4"] }
wasm-bindgen = "0.2.106"

manchester-dnd-core = { path = "crates/game-core" }
manchester-dnd-server = { path = "crates/game-server" }

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[[workspace.metadata.leptos]]
name = "manchester-arcana"
bin-package = "manchester-dnd-web"
lib-package = "manchester-dnd-frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
lib-profile-release = "wasm-release"
