[package]
name = "manchester-dnd-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
http = { workspace = true, optional = true }
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
manchester-dnd-core.workspace = true
manchester-dnd-server = { workspace = true, optional = true }
serde.workspace = true
tracing = { workspace = true, optional = true }
uuid.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:http",
    "dep:leptos_axum",
    "dep:manchester-dnd-server",
    "dep:tracing",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
