[package]
name = "manchester-dnd-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "manchester-dnd-web"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
axum = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
http = { workspace = true, optional = true }
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
manchester-dnd-core.workspace = true
manchester-dnd-server = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
subtle = { version = "2", optional = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
uuid.workspace = true
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4.56", optional = true }
web-sys = { workspace = true, optional = true, features = [
    "Document",
    "Element",
    "Headers",
    "HtmlElement",
    "Request",
    "RequestInit",
    "Response",
    "Storage",
    "Window",
] }

[features]
default = []
hydrate = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:http",
    "dep:leptos_axum",
    "dep:manchester-dnd-server",
    "dep:sha2",
    "dep:subtle",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dev-dependencies]
futures-util = "0.3.31"
