[package]
name = "manchester-dnd-frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
leptos = { workspace = true, features = ["hydrate"] }
manchester-dnd-app = { path = "../app", default-features = false, features = ["hydrate"] }
wasm-bindgen.workspace = true
