[package]
name = "manchester-dnd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "manchester_dnd_core"
path = "src/lib.rs"

[dependencies]
rand_chacha = "=0.9.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
