[package]
name = "manchester-dnd-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "manchester_dnd_server"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
manchester-dnd-core = { path = "../game-core" }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
