[package]
name = "manchester-dnd-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "manchester_dnd_server"
path = "src/lib.rs"

[features]
default = []
fuzzing = []
legacy-import = ["sqlx/sqlite"]

[[bin]]
name = "legacy-import"
path = "src/bin/legacy-import.rs"
required-features = ["legacy-import"]

[dependencies]
async-trait = "0.1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
dotenvy = "0.15"
hmac = "0.12"
image = { version = "0.25.6", default-features = false, features = ["png", "webp"] }
manchester-dnd-core = { path = "../game-core" }
password-hash = { version = "0.5", features = ["alloc"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
