[package]
name = "manchester-dnd-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "manchester_dnd_server"
path = "src/lib.rs"

[features]
default = []
fuzzing = []

[[test]]
name = "mongo-contract-foundation"
path = "tests/mongo_contract/foundation.rs"

[[test]]
name = "mongo-contract-auth"
path = "tests/mongo_contract/auth.rs"

[dependencies]
async-trait = "0.1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
deadpool-redis.workspace = true
dotenvy = "0.15"
hmac = "0.12"
image = { version = "0.25.6", default-features = false, features = ["png", "webp"] }
manchester-dnd-core = { path = "../game-core" }
mongodb.workspace = true
password-hash = { version = "0.5", features = ["alloc"] }
rand = "0.9"
redis.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
